--- a/webapp/i18n/i18n.properties
+++ b/webapp/i18n/i18n.properties
@@ -1,3 +1,7 @@
 title=OpenUI5 Basic Template
 appTitle=OpenUI5 Basic Template
 appDescription=Best-practice starting point for building a freestyle app
+
+master.title=Listas de Compra
+
+detail.title=Lista de Compras {0}
