Implementation of the frontend app. Routing.

--- a/webapp/i18n/i18n.properties
+++ b/webapp/i18n/i18n.properties
@@ -4,4 +4,4 @@ appDescription=Best-practice starting point for building a freestyle app
 
 master.title=Listas de Compra
 
-detail.title=Lista de Compras {0}
+detail.title=Lista de Compras
