--- a/webapp/i18n/i18n.properties
+++ b/webapp/i18n/i18n.properties
@@ -1,5 +1,5 @@
-title=OpenUI5 Basic Template
-appTitle=OpenUI5 Basic Template
+title=Lista de Compras
+appTitle=Lista de Compras
 appDescription=Best-practice starting point for building a freestyle app
 
 master.title=Listas de Compra
